--- a/index.html
+++ b/index.html
@@ -338,6 +338,61 @@
             </li>
           </ul>
         </div>
+
+        <!-- Referees:
+-->
+        <div class="soft-skills-container">
+          <h3 class="sidebar-title">Referees:</h3>
+          <h4 class="sidebar-title">First Referees:</h4>
+
+          <ul class="skills-list">
+            <li class="skills-list-item">
+              <span class="skills-list-text">Name: Lisa Foley</span>
+            </li>
+            <li class="skills-list-item">
+              <span class="skills-list-text"
+                >Job Role: Family Resource Centre Co-Ordinator
+              </span>
+            </li>
+            <li class="skills-list-item">
+              <span class="skills-list-text"
+                >Address: Castlemaine FRC, Tralee Road, Castlemaine, Co. Kerry
+              </span>
+            </li>
+            <li class="skills-list-item">
+              <span class="skills-list-text">Phone No.: 086-0580019</span>
+            </li>
+            <li class="skills-list-item">
+              <span class="skills-list-text">
+                E-mail: lisa.mainevalleyfrc@gmail.com
+              </span>
+            </li>
+          </ul>
+
+          <h4 class="sidebar-title">Second Referees:</h4>
+
+          <ul class="skills-list">
+            <li class="skills-list-item">
+              <span class="skills-list-text">Name: Eoin Harlihy </span>
+            </li>
+            <li class="skills-list-item">
+              <span class="skills-list-text">English teacher, S.K.D.P. </span>
+            </li>
+            <li class="skills-list-item">
+              <span class="skills-list-text"
+                >Address: 11A W Main St, Cahersiveen, Co. Kerry
+              </span>
+            </li>
+            <li class="skills-list-item">
+              <span class="skills-list-text">Phone No.: 087-185-15-58</span>
+            </li>
+            <li class="skills-list-item">
+              <span class="skills-list-text">
+                E-mail: eoinherlihybusiness@gmail.com
+              </span>
+            </li>
+          </ul>
+        </div>
       </aside>
     </div>
   </body>
