--- a/index.html
+++ b/index.html
@@ -245,6 +245,11 @@
               >dragunvalentin91@gmail.com</a
             >
           </p>
+          <p class="contacts-item">
+            <span class="contacts-type"
+              >A: Ardcanaught West, Castlemaine Co. Kerry V93N7Y7
+            </span>
+          </p>
         </div>
 
         <!-- Languages -->
