--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <p class="work-period">
               Mar.2023...
-              <span class="text-divider">|</span> Farnes Construction LTD.
+              <span class="text-divider">|</span> Construction.
             </p>
 
             <ul class="work-duties-list">
