--- a/index.html
+++ b/index.html
@@ -69,20 +69,38 @@
           <div class="work-experience-place">
             <h4 class="work-experience-position">
               Position/Job Role:
+              <span class="work-experience-company"> Boxing coach </span>
+            </h4>
+
+            <p class="work-period">
+              2016/August 2022
+              <span class="text-divider">|</span> Part time job. Boxing coach.
+            </p
+
+            <ul class="work-duties-list">
+              <li class="work-duties"> I taught boxing kids and adults. </li>
+            </ul>
+          </div>
+
+          <!-- Company 3 -->
+
+          <div class="work-experience-place">
+            <h4 class="work-experience-position">
+              Position/Job Role:
               <span class="work-experience-company"> Chef's assistant. </span>
             </h4>
 
             <p class="work-period">
               Dec. 2021/August 2022
-              <span class="text-divider">|</span> "Bodenko Hotele Stok", Wisla,
+              <span class="text-divider">|</span> "Hotele Stok", Wisla,
               Poland
-            </p>
+            </p
 
             <ul class="work-duties-list">
               <li class="work-duties">Every day different duties</li>
             </ul>
           </div>
-          <!-- Company 3 -->
+          <!-- Company 4 -->
 
           <div class="work-experience-place">
             <h4 class="work-experience-position">
@@ -100,7 +118,7 @@
               <li class="work-duties">Completed CSS course</li>
             </ul>
           </div>
-          <!-- Company 4 -->
+          <!-- Company 5 -->
 
           <div class="work-experience-place">
             <h4 class="work-experience-position">
@@ -119,7 +137,7 @@
               <li class="work-duties">Selected a job according to skills.</li>
             </ul>
           </div>
-          <!-- Company 5 -->
+          <!-- Company 6 -->
 
           <div class="work-experience-place">
             <h4 class="work-experience-position">
@@ -129,8 +147,7 @@
 
             <p class="work-period">
               Sep. 2016/Nov. 2018
-              <span class="text-divider">|</span> "Ruta Hotel" Ukraine Odessa
-              region Zatoka.
+              <span class="text-divider">|</span> "Warm Home", Odessa, Ukraine.
             </p>
 
             <ul class="work-duties-list">
@@ -140,7 +157,7 @@
             </ul>
           </div>
 
-          <!-- Company 6 -->
+          <!-- Company 7 -->
 
           <div class="work-experience-place">
             <h4 class="work-experience-position">
@@ -152,8 +169,7 @@
 
             <p class="work-period">
               Oct.2014/Aug. 2016
-              <span class="text-divider">|</span> "Ruta Hotel" Ukraine Odessa
-              region Zatoka.
+              <span class="text-divider">|</span> "Luxury clothes 7km", Odessa, Ukr.
             </p>
 
             <ul class="work-duties-list">
