--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <div class="work-experience-place">
             <h4 class="work-experience-position">
               Position/Job Role:
-              <span class="work-experience-company">Manager, Recruitment </span>
+              <span class="work-experience-company"> Project Manager, Recruitment </span>
             </h4>
 
             <p class="work-period">
